# packages-report

./: pyproject.toml  requirements-ci.txt
.github/: FUNDING.yml
.github/workflows/: ci.yml
ci/: run-flake8.sh  run-reorder-python-imports.sh
src/packages_report/: cli.py
src/packages_report/lib/: __init__.py  apt.py  config.py  formatters.py  models.py  sendmail.py
tests/: test_cli.py
tests/files/: report_installed_stdout_01.json  report_installed_stdout_01.txt  report_upgrades_stdout_01.json  report_upgrades_stdout_01.txt
tests/test_lib/: test_apt.py  test_formatters.py  test_models.py  test_sendmail.py
tests/test_lib/files/: fixture_apt_upgrades_01.txt  fixture_dpkg_01.txt  report_installed_01.txt  report_upgrades_01.txt
